--- a/app/myPokemon.html
+++ b/app/myPokemon.html
@@ -7,8 +7,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script src="js/fetchContractData.js"></script>
-    <script src="js/deployContract.js"></script>
     <script src="js/displayPokemon.js"></script>
+    <script src="js/web3.js"></script>
+
     <style>
       .container {
         display: flex;
