--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple HTML File</title>
-
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script src="js/fetchContractData.js"></script>
-    <script src="js/deployContract.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/web3.js"></script>
     <style>
       .container {
         display: flex;
